# pi

./: docker-compose.yml  pi.sh  run
bw/: .gitignore  pyproject.toml
bw/src/bw/: __init__.py  core.py
nginx/: Dockerfile  default.conf
pihole/: README.md
web-app/: Dockerfile  app.py  pyproject.toml
